[gd_scene load_steps=3 format=3 uid="uid://bsrym6k1vywfo"]

[ext_resource type="Script" uid="uid://cvqk3cxm2c8t5" path="res://gui/quests/quest_tracker.gd" id="1_k0ovv"]

[sub_resource type="LabelSettings" id="LabelSettings_j8sdj"]
font_size = 24

[node name="QuestTracker" type="VBoxContainer"]
use_parent_material = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
alignment = 1
script = ExtResource("1_k0ovv")

[node name="NameIconContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="Icon" type="TextureRect" parent="NameIconContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Name" type="Label" parent="NameIconContainer"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2
label_settings = SubResource("LabelSettings_j8sdj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ObjectiveContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2
alignment = 1

[node name="AnimationNode" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 2
